# rp2350_controller

./: CHANGELOG.md  CONTROL_THEORY.md  Cargo.toml  HOW_IT_WORKS.md  README.md  memory.x  temp_example
.cargo/: config.toml
controll/: fit_throttle_model.m  generate_kalman_data.m  kalman.m  kalman_dead_reckoning.m  kalman_sim_data.mat  kalman_with_camera.m  plot_camera_degrees.m  simulin.slx  steering_pwm_to_target_angle.m  throttle_pwm_to_accel.m  ultrasound_step_variance.m
controll/actual_on_ground_data/: log_20260509_111211.csv  log_20260509_114746.csv  log_20260509_133305.csv  plot_drag.m  plot_drive_log.asv  plot_drive_log.m  plot_forward_accel.m
controll/data/: camera_alignment_1778588231549(1).csv  data_dist_1.txt  data_dist_2.txt  data_ultraljud.csv
controll/slprj/_jitprj/: s30K7FYUKeUWqu8AfCOJDLE.l  s30K7FYUKeUWqu8AfCOJDLE.mat
controll/slprj/_sfprj/EMLReport/: s30K7FYUKeUWqu8AfCOJDLE.mat
controll/slprj/_sfprj/EMLReport/s30K7FYUKeUWqu8AfCOJDLE/: report.mldatx
controll/slprj/_sfprj/precompile/: X7g18XunRVQYqq0gLscfwD.mat
controll/slprj/_sfprj/simulin/: amsi_serial.mat
controll/slprj/_sfprj/simulin/_self/sfun/info/: binfo.mat
datahämtning/: compare_current_vs_throttle.m  compare_fitted_power_vs_speed.m  log_20260427_172721.csv  log_20260428_120741.csv  log_20260428_122250.csv  log_20260428_122452.csv  log_4.0.csv  power27-04.csv  power28-04-1.0.csv  power28-04-2.0.csv  power28-04-3.0.csv  power4.0.csv  speed_variance_test_1.csv  strömmätare.c  temp
datahämtning/strommätare/: strommätare.ino
examples/: simple.rs
src/: constants.rs  controller_processor.rs  entry.rs  hc_rs04.rs  hc_sr04.rs  ipc.rs  lib.rs  logging.rs  main.rs  usb_serial.rs  utils.rs
src/controller_processor/: controller.rs  controller_processor_loop.rs  kalman_filter.rs
