[package]
name = "rp2350_controller"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
rp235x-hal = { version = "0.3", features = ["defmt", "critical-section-impl"] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = {version = "2.2.0", features = ["thumbv8main-backend"] }
rtic-monotonics = {version = "2.1.0", features = ["rp235x"]}
rp235x-pac = "0.1.0"
embedded-io = "0.7.1"
embedded-hal = "1.0.0"
fugit = "0.3.9"
libm = "0.2"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
heapless = "0.8"
atomic-waker = "1.1"

[features]
default = ["echo_usb"]
echo_usb = []
simple_csv = []

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 3
overflow-checks = false
